# Research-Paper-Assistant

./: README.md  papers.txt  pyproject.toml  report.docx  requirements.txt
configs/: default.json
examples/: example_usage.py
src/: __init__.py  arxiv_search.py  chunker.py  fetcher.py  metadata.py  report.py  server.py  summarize.py  synthesize.py
src/orchestrator/: agent.py  pipeline.py
tests/: test_tools.py
